[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/ChakraPetch-BoldItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://entities/ScoringScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="ScoringScreen" type="Node2D"]
script = ExtResource( 2 )
next_scene_path = "res://scenes/levels/FirtsFloor.tscn"

[node name="Control" type="Control" parent="."]
margin_right = 1025.0
margin_bottom = 769.0
rect_pivot_offset = Vector2( -520, 136 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="WinText" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.5
margin_top = -248.5
margin_right = 188.5
margin_bottom = -117.5
custom_fonts/font = SubResource( 1 )
text = "You win"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="EnemiesKillText" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.5
margin_top = -104.5
margin_right = 143.5
margin_bottom = -25.5
custom_fonts/font = SubResource( 2 )
text = "Enemies:"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FinalText" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -392.5
margin_top = 151.5
margin_right = 103.5
margin_bottom = 230.5
custom_fonts/font = SubResource( 2 )
text = "Final Time:"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="KOtext" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.5
margin_top = 23.5
margin_right = 111.5
margin_bottom = 102.5
custom_fonts/font = SubResource( 2 )
text = "Times KO'd:"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FurnitureText" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.5
margin_top = -40.5
margin_right = 335.5
margin_bottom = 38.5
custom_fonts/font = SubResource( 2 )
text = "Furniture destroyed:"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Reload" type="Label" parent="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.5
margin_top = 263.5
margin_right = 215.5
margin_bottom = 335.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 3 )
text = "Press R to reload"
__meta__ = {
"_edit_use_anchors_": false
}
